Delete dataset version property (#65)