@@ -18,8 +18,6 @@ package com.chutneytesting.dataset.api;
 
 
 import com.chutneytesting.server.core.domain.dataset.DataSet;
-import com.chutneytesting.server.core.domain.tools.ui.KeyValue;
-import java.util.stream.Collectors;
 
 public class DataSetMapper {
 
@@ -31,7 +29,7 @@ public class DataSetMapper {
             .lastUpdated(dataSet.creationDate)
             .tags(dataSet.tags)
             .constants(KeyValue.fromMap(dataSet.constants))
-            .datatable(dataSet.datatable.stream().map(KeyValue::fromMap).collect(Collectors.toList()))
+            .datatable(dataSet.datatable.stream().map(KeyValue::fromMap).toList())
             .build();
     }
 
@@ -43,7 +41,7 @@ public class DataSetMapper {
             .withCreationDate(dto.lastUpdated())
             .withTags(dto.tags())
             .withConstants(KeyValue.toMap(dto.constants()))
-            .withDatatable(dto.datatable().stream().map(KeyValue::toMap).collect(Collectors.toList()))
+            .withDatatable(dto.datatable().stream().map(KeyValue::toMap).toList())
             .build();
     }
 }
