@@ -1,26 +1,26 @@
 /*
- * Copyright 2017-2023 Enedis
+ *  Copyright 2017-2023 Enedis
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ *
  */
 
-package com.chutneytesting.server.core.domain.tools.ui;
+package com.chutneytesting.dataset.api;
 
 import static java.util.Optional.ofNullable;
 
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -42,18 +42,20 @@ public interface KeyValue {
 
     static List<KeyValue> fromMap(Map<String, String> map) {
         return map.keySet().stream()
-            .map((key) -> ImmutableKeyValue.builder()
+            .map((key) -> (KeyValue) ImmutableKeyValue.builder()
                 .key(key)
                 .value(map.get(key))
-                .build())
-            .collect(Collectors.toList());
+                .build()
+            )
+            .toList();
     }
+
 
     static Map<String, String> toMap(List<KeyValue> list) {
         return ofNullable(list)
             .map(l -> l.stream()
                 .filter(kv -> StringUtils.isNoneBlank(kv.key()))
-                .collect(Collectors.toMap(KeyValue::key, KeyValue::value, (k1, k2) -> k1, LinkedHashMap::new)))
-            .orElseGet(LinkedHashMap::new);
+                .collect(Collectors.toUnmodifiableMap(KeyValue::key, KeyValue::value, (k1, k2) -> k1)))
+            .orElseGet(Map::of);
     }
 }
